Remove rpc/js as it is now in TypeScript SDK

--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -1,66 +1,49 @@
 ROOT_DIR:=$(shell dirname $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))/../../../..)
-all: build
-.PHONY: all
 
-build:
-	export NODE_OPTIONS=--openssl-legacy-provider && node --version 2>/dev/null || unset NODE_OPTIONS;\
-	cd frontend && npm install && npm run build
-
-run-server: build
+run-server:
 	go run server/cmd/main.go -instance-name=echo-server
-
-.PHONY: install-playwright
-install-playwright:
-	npm install
-	npx playwright install --with-deps
-
-test-run-server: build install-playwright
-	npx playwright test
 
 run-client:
 	go run client/main.go -host=echo-server
 
-run-node-client:
-	cd node-client && npm start
-
 setup-auth:
 	cd ${ROOT_DIR} && make setup-cert setup-priv-key
 
-run-server-auth: build setup-auth
+run-server-auth: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
 		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
 
-run-server-auth-tls: build setup-auth
+run-server-auth-tls: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server \
 		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
 		-tls-auth
 
-run-server-auth-internal: build setup-auth
+run-server-auth-internal: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
 		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
 		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
 		-external-auth-addr=https://localhost:8081
 
-run-server-auth-external: build setup-auth
+run-server-auth-external: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
 		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
 		-external-auth 8081
 
-run-server-auth-with-access-token: build setup-auth
+run-server-auth-with-access-token: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
 		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
 		-use-access-token
 
-run-server-auth-with-external-access-token: build setup-auth
+run-server-auth-with-external-access-token: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
 		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
@@ -70,7 +53,7 @@ run-server-auth-with-external-access-token: build setup-auth
 		-external-auth-addr=https://localhost:8081 \
 		-external-auth 8081
 
-run-server-auth-internal-as-external: build setup-auth
+run-server-auth-internal-as-external: setup-auth
 	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
 		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
 		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
@@ -91,6 +74,3 @@ run-client-auth-external: setup-auth
 
 run-client-auth-external-direct: setup-auth
 	go run client/main.go -api-key=supersecretkeyohmy -external-auth-addr=localhost:8081 -host=localhost:8080
-
-clean:
-	rm -rf frontend/dist
