--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -1,57 +1,59 @@
 service:
-  golangci-lint-version: 1.51.x
+  golangci-lint-version: 1.61.x
 run:
+  timeout: 10m
   deadline: 900s
   modules-download-mode: readonly
-  skip-dirs:
-    - genfiles$
-    - gen$
-    - vendor$
-    - test$
+  skip-dirs-use-default: false
   tests: true
 linters:
   enable-all: true
   disable:
     - asasalint
+    - canonicalheader
     - containedctx
+    - contextcheck
+    - copyloopvar # TODO(go1.23): reenable in follow-up
     - cyclop
-    - deadcode
-    - exhaustivestruct
+    - depguard
     - exhaustruct
+    - fatcontext # TODO(go1.23): reenable in follow-up
     - forcetypeassert
     - funlen
     - gocognit
     - godox
-    - goerr113
+    - err113
     - gochecknoglobals
     - gochecknoinits
     - gocyclo
     - gofmt
     - goimports
-    - golint
     - gomnd
-    - ifshort
     - importas
+    - inamedparam
     - interfacebloat
-    - interfacer
+    - intrange # TODO(go1.23): reenable in follow-up
     - ireturn
     - maintidx
-    - maligned
     - makezero
+    - mnd
     - musttag
+    - nakedret
     - nestif
+    - nilnil # TODO(go1.23): low-pri to reenable
     - nlreturn
-    - nosnakecase
     - nonamedreturns
     - nosprintfhostport
     - paralleltest
+    - perfsprint
     - prealloc
-    - scopelint
-    - structcheck
+    - predeclared # TODO(go1.23): reenable in follow-up
+    - protogetter # TODO(go1.23): maybe reenable in the future but it's a big diff + buggy.
+    - spancheck # TODO(go1.23): reenable in follow-up
     - tagliatelle
+    - tenv # TODO(go1.23): reenable in follow-up
     - testpackage
     - thelper # false positives
-    - varcheck
     - varnamelen
     - wrapcheck
     - wsl
@@ -64,24 +66,51 @@ linters-settings:
       - default
       - prefix(go.viam.com/utils)
   gofumpt:
-    lang-version: "1.18"
+    lang-version: "1.23"
     extra-rules: true
   gosec:
     excludes:
       - G601
+      - G115 # TODO(go1.23): maybe reenable
   govet:
     enable-all: true
     disable:
       - fieldalignment
       - shadow
+      - composites
   lll:
     line-length: 140
   revive:
-    disable:
-    - package-comments
+    # Unfortunately configuring a single rules disables all other rules, even
+    # if we set `enable-all: true`
+    #
+    # To get around this, we include default rules:
+    # https://github.com/mgechev/revive/blob/master/defaults.toml
+    rules:
+      - name: blank-imports
+      - name: context-as-argument
+      - name: context-keys-type
+      - name: dot-imports
+      # - name: empty-block
+      - name: error-naming
+      - name: error-return
+      - name: error-strings
+      - name: errorf
+      # - name: exported
+      - name: increment-decrement
+      - name: indent-error-flow
+      # - name: package-comments
+      - name: range
+      - name: receiver-naming
+      - name: redefines-builtin-id
+      - name: superfluous-else
+      - name: time-naming
+      - name: unexported-return
+      # - name: unused-parameter
+      - name: unreachable-code
+      - name: var-declaration
+      - name: var-naming
 issues:
-  exclude:
-    - composites
   exclude-rules:
     - path: _test\.go$|^tests/|^samples/
       linters:
