sigh stray comma

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -84,7 +84,7 @@
     :versions: []
     :when: 2022-08-30 15:22:06.823924964 Z
 - - :approve
-  - github.com/muhlemmer/gu,
+  - github.com/muhlemmer/gu
   - :who: 
     :why: 
     :versions: []
