--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -4,7 +4,6 @@ run:
   timeout: 10m
   deadline: 900s
   modules-download-mode: readonly
-  skip-dirs-use-default: false
   tests: true
 linters:
   enable-all: true
@@ -15,7 +14,9 @@ linters:
     - contextcheck
     - cyclop
     - depguard
+    - execinquery
     - exhaustruct
+    - exportloopref
     - forcetypeassert
     - funlen
     - gocognit
@@ -60,7 +61,6 @@ linters-settings:
       - default
       - prefix(go.viam.com/utils)
   gofumpt:
-    lang-version: "1.23"
     extra-rules: true
   gosec:
     excludes:
@@ -122,5 +122,6 @@ issues:
         - revive
       text: exported
   exclude-use-default: false
+  exclude-dirs-use-default: false
   max-per-linter: 0
   max-same-issues: 0
