Move tool management and make targets to mise

--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -1,76 +1,42 @@
-ROOT_DIR:=$(shell dirname $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))/../../../..)
-
 run-server:
-	go run server/cmd/main.go -instance-name=echo-server
+	mise r run-server
 
 run-client:
-	go run client/main.go -host=echo-server
+	mise r run-client
 
 setup-auth:
-	cd ${ROOT_DIR} && make setup-cert setup-priv-key
+	mise r setup-auth
 
-run-server-auth: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
-		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
+run-server-auth:
+	mise r run-server-auth
 
-run-server-auth-tls: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server \
-		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-tls-auth
+run-server-auth-tls:
+	mise r run-server-auth-tls
 
-run-server-auth-internal: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
-		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external-auth-addr=https://localhost:8081
+run-server-auth-internal:
+	mise r run-server-auth-internal
 
-run-server-auth-external: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
-		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external-auth 8081
+run-server-auth-external:
+	mise r run-server-auth-external
 
-run-server-auth-with-access-token: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
-		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-use-access-token
+run-server-auth-with-access-token:
+	mise r run-server-auth-with-access-token
 
-run-server-auth-with-external-access-token: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
-		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-use-access-token \
-		-external-auth-addr=https://localhost:8081 \
-		-external-auth 8081
+run-server-auth-with-external-access-token:
+	mise r run-server-auth-with-external-access-token
 
-run-server-auth-internal-as-external: setup-auth
-	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
-		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external-auth-addr=https://localhost:8081 \
-		-external-auth
+run-server-auth-internal-as-external:
+	mise r run-server-auth-internal-as-external
 
-run-client-auth: setup-auth
-	go run client/main.go -host=echo-server -api-key=supersecretkeyohmy
+run-client-auth:
+	mise r run-client-auth
 
-run-client-auth-tls: setup-auth
-	go run client/main.go -host=echo-server -tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
+run-client-auth-tls:
+	mise r run-client-auth-tls
 
-run-client-auth-external: setup-auth
-	go run client/main.go -host=echo-server -api-key=supersecretkeyohmy -external-auth-addr=localhost:8081
+run-client-auth-external:
+	mise r run-client-auth-external
 
-run-client-auth-external-direct: setup-auth
-	go run client/main.go -api-key=supersecretkeyohmy -external-auth-addr=localhost:8081 -host=localhost:8080
+run-client-auth-external-direct:
+	mise r run-client-auth-external-direct
+
