--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -18,8 +18,18 @@ jobs:
     container:
       image: ghcr.io/viamrobotics/canon:amd64
     steps:
-      - uses: actions/checkout@v3
-      - uses: bufbuild/buf-setup-action@v1.8.0
+      - uses: actions/checkout@v5
+      - uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac
+        with:
+          experimental: true
+          install: false
+      - name: Extract buf version from mise
+        id: buf-version
+        run:
+          echo "version=$(mise tool buf --active)" >> $GITHUB_OUTPUT
+      - uses: bufbuild/buf-setup-action@a47c93e0b1648d5651a065437926377d060baa99
+        with:
+          version: ${{ steps.buf-version.outputs.version }}
       - uses: bufbuild/buf-push-action@v1
         with:
           buf_token: ${{ secrets.BUF_TOKEN }}
