--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,6 +123,9 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version-file: go.mod
+    - uses: install testing deps
+      run: |
+        go get gotest.tools/gotestsum@v1.10.0
     - name: test
       env:
         GOFLAGS: "-tags=no_cgo"
