update some stuff

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -125,13 +125,13 @@ jobs:
         go-version-file: go.mod
     - name: install testing deps
       run: |
-        go get gotest.tools/gotestsum@v1.10.0
+        go install gotest.tools/gotestsum@v1.10.0
     - name: test
       env:
         GOFLAGS: "-tags=no_cgo"
       run:
         # note: this is a subset of tests that are known to pass on windows
-        go run gotest.tools/gotestsum --format standard-verbose --jsonfile json.log ./pexec
+        gotestsum --format standard-verbose --jsonfile json.log ./pexec
 
     - name: Upload test.json
       if: always()
