--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,7 +132,7 @@ jobs:
         GOFLAGS: "-tags=no_cgo"
       run:
         # note: this is a subset of tests that are known to pass on windows
-        bash gotestsum --format standard-verbose --jsonfile json.log ./pexec
+        bash
         gotestsum --format standard-verbose --jsonfile json.log ./pexec
 
     - name: Upload test.json
