--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,8 +129,8 @@ jobs:
     - name: test
       env:
         GOFLAGS: "-tags=no_cgo"
-      run:
-        # note: this is a subset of tests that are known to pass on windows
+      # note: this is a subset of tests that are known to pass on windows
+      run: |
         bash
         gotestsum --format standard-verbose --jsonfile json.log ./pexec
 
