--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,6 +129,7 @@ jobs:
     - name: test
       env:
         GOFLAGS: "-tags=no_cgo"
+      # note: tests do not pass on the default powershell, but do pass in bash.
       shell: bash
       # note: this is a subset of tests that are known to pass on windows
       run: |
