--- a/mise.toml
+++ b/mise.toml
@@ -26,7 +26,7 @@ go = "1.23.8"
 "go:github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2" = "2.27.1"
 "go:github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc" = "1.5.1"
 golangci-lint = "1.61.0"
-gotestsum = "1.10.0"
+gotestsum = "1.10.0" # should be kept in sync with go.mod and test.yml
 jq = "1.8.1"
 node = "18.20.8"
 protoc = "21.12"
