--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,10 +123,10 @@ jobs:
     - uses: actions/setup-go@v5
       with:
         go-version-file: go.mod
-    - name: install testing deps
-      # should be kept in sync with mise.toml and go.mod
-      run: |
-        go install gotest.tools/gotestsum@v1.10.0
+    - name: Install toolchain
+      uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac
+      with:
+        experimental: true
     - name: test
       env:
         GOFLAGS: "-tags=no_cgo"
