--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,9 +124,7 @@ jobs:
       with:
         go-version-file: go.mod
     - name: Install toolchain
-      uses: jdx/mise-action@c37c93293d6b742fc901e1406b8f764f6fb19dac
-      with:
-        experimental: true
+      uses: jdx/mise-action@v2
     - name: test
       env:
         GOFLAGS: "-tags=no_cgo"
