--- a/mise.toml
+++ b/mise.toml
@@ -15,7 +15,7 @@ lockfile = false
 disable_backends = ["asdf"]
 
 [tools]
-"ubi:bufbuild/buf" = "1.55.1"
+buf = "1.55.1"
 go = "1.23.8"
 "go:github.com/AlekSi/gocov-xml" = "1.0.0"
 "go:github.com/axw/gocov/gocov" = "1.1.0"
@@ -32,6 +32,9 @@ node = "18.20.8"
 protoc = "21.12"
 protoc-gen-go = "1.35.1"
 protoc-gen-go-grpc = "1.5.1"
+
+[alias]
+buf = "ubi:bufbuild/buf"
 
 [tasks.setup-cert]
 description = "Create a self-signed cert and add it to the system trust store"
