--- a/mise.toml
+++ b/mise.toml
@@ -26,12 +26,15 @@ go = "1.23.8"
 "go:github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2" = "2.27.1"
 "go:github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc" = "1.5.1"
 golangci-lint = "1.61.0"
-gotestsum = "1.10.0"
+gotestsum = "1.10.0" # should be kept in sync with go.mod
 jq = "1.8.1"
 node = "18.20.8"
 protoc = "21.12"
 protoc-gen-go = "1.35.1"
 protoc-gen-go-grpc = "1.5.1"
+
+[alias]
+buf = "ubi:bufbuild/buf"
 
 [tasks.setup-cert]
 description = "Create a self-signed cert and add it to the system trust store"
