--- a/mise.toml
+++ b/mise.toml
@@ -26,7 +26,7 @@ go = "1.25"
 "go:github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2" = "2.27.1"
 "go:github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc" = "1.5.1"
 golangci-lint = "1.61.0"
-gotestsum = "1.10.0" # should be kept in sync with go.mod
+gotestsum = "1.10.0"                                                              # should be kept in sync with go.mod
 jq = "1.8.1"
 node = "18.20.8"
 protoc = "21.12"
@@ -46,19 +46,22 @@ description = "Create private keys for testing"
 dir = "etc"
 run = "bash ./setup_priv_key.sh"
 
+[tasks.get-go]
+alias = "get"
+run = "go get -t ./..."
+
 [tasks.build-go]
 alias = "build"
+wait_for = ["get-go", "lint-go"]
 depends = ["buf-go"]
 run = "go build ./..."
 
 [tasks.buf-go]
-run = [
-  "buf lint",
-  "buf generate",
-]
+run = ["buf lint", "buf generate"]
 
 [tasks.lint-go]
 alias = "lint"
+depends = ["get-go"]
 run = """
   {% raw %}
   #!/usr/bin/env bash
