--- a/mise.toml
+++ b/mise.toml
@@ -46,13 +46,8 @@ description = "Create private keys for testing"
 dir = "etc"
 run = "bash ./setup_priv_key.sh"
 
-[tasks.get-go]
-alias = "get"
-run = "go get -t ./..."
-
 [tasks.build-go]
 alias = "build"
-wait_for = ["get-go", "lint-go"]
 depends = ["buf-go"]
 run = "go build ./..."
 
@@ -61,19 +56,18 @@ run = ["buf lint", "buf generate"]
 
 [tasks.lint-go]
 alias = "lint"
-depends = ["get-go"]
-run = "echo skip"
-# run = """
-#   {% raw %}
-#   #!/usr/bin/env bash
-#   set -x
-#   go mod tidy
-#   buf lint
-#   set +x
-#   export pkgs=`go list -f '{{.Dir}}' ./... | grep -v gen | grep -v proto` && echo "$pkgs" | xargs -t go vet -vettool=$(which combined)
-#   export GOGC=50 pkgs=`go list -f '{{.Dir}}' ./... | grep -v gen | grep -v proto` && echo "$pkgs" | xargs -t golangci-lint run $LINT_BUILD_TAGS -v --fix --config=./etc/.golangci.yaml
-#   {% endraw %}
-# """
+wait_for = ["build-go"]
+run = """
+  {% raw %}
+  #!/usr/bin/env bash
+  set -x
+  go mod tidy
+  buf lint
+  set +x
+  export pkgs=`go list -f '{{.Dir}}' ./... | grep -v gen | grep -v proto` && echo "$pkgs" | xargs -t go vet -vettool=$(which combined)
+  export GOGC=50 pkgs=`go list -f '{{.Dir}}' ./... | grep -v gen | grep -v proto` && echo "$pkgs" | xargs -t golangci-lint run $LINT_BUILD_TAGS -v --fix --config=./etc/.golangci.yaml
+  {% endraw %}
+"""
 
 [tasks.cover]
 run = "./etc/test.bash cover"
