Reenable noctx lint and fix errors

--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -42,7 +42,7 @@ linters:
     - misspell
     - nilerr
     - nilnil
-    # - noctx
+    - noctx
     # - nolintlint
     - predeclared
     - promlinter
