Update go to 1.25, golangci-lint to 2.6.2 (#507)

--- a/mise.toml
+++ b/mise.toml
@@ -16,7 +16,7 @@ disable_backends = ["asdf"]
 
 [tools]
 buf = "1.55.1"
-go = "1.23.8"
+go = "1.25"
 "go:github.com/AlekSi/gocov-xml" = "1.0.0"
 "go:github.com/axw/gocov/gocov" = "1.1.0"
 "go:github.com/bufbuild/buf/cmd/protoc-gen-buf-breaking" = "1.55.1"
@@ -25,8 +25,8 @@ go = "1.23.8"
 "go:github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway" = "2.20.0"
 "go:github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2" = "2.27.1"
 "go:github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc" = "1.5.1"
-golangci-lint = "1.61.0"
-gotestsum = "1.10.0" # should be kept in sync with go.mod
+golangci-lint = "2.6.2"
+gotestsum = "1.10.0"                                                              # should be kept in sync with go.mod
 jq = "1.8.1"
 node = "18.20.8"
 protoc = "21.12"
@@ -52,13 +52,11 @@ depends = ["buf-go"]
 run = "go build ./..."
 
 [tasks.buf-go]
-run = [
-  "buf lint",
-  "buf generate",
-]
+run = ["buf lint", "buf generate"]
 
 [tasks.lint-go]
 alias = "lint"
+wait_for = ["build-go"]
 run = """
   {% raw %}
   #!/usr/bin/env bash
