--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -1,127 +1,155 @@
-service:
-  golangci-lint-version: 1.61.x
+version: "2"
 run:
-  timeout: 10m
-  deadline: 900s
   modules-download-mode: readonly
   tests: true
 linters:
-  enable-all: true
-  disable:
-    - asasalint
-    - canonicalheader
-    - containedctx
-    - contextcheck
-    - cyclop
-    - depguard
-    - execinquery
-    - exhaustruct
-    - exportloopref
-    - forcetypeassert
-    - funlen
-    - gocognit
-    - godox
-    - err113
-    - gochecknoglobals
-    - gochecknoinits
-    - gocyclo
-    - gofmt
-    - goimports
-    - gomnd
-    - importas
-    - inamedparam
-    - interfacebloat
-    - intrange # TODO(go1.23): reenable in follow-up
-    - ireturn
-    - maintidx
-    - makezero
-    - mnd
-    - musttag
-    - nakedret
-    - nestif
-    - nlreturn
-    - nonamedreturns
-    - nosprintfhostport
-    - paralleltest
-    - perfsprint
-    - prealloc
-    - spancheck # TODO(go1.23): reenable in follow-up
-    - tagliatelle
-    - testpackage
-    - thelper # false positives
-    - varnamelen
-    - wrapcheck
-    - wsl
-linters-settings:
-  errcheck:
-    check-blank: true
-  gci:
-    sections:
-      - standard
-      - default
-      - prefix(go.viam.com/utils)
-  gofumpt:
-    extra-rules: true
-  gosec:
-    excludes:
-      - G601
-      - G115 # TODO(go1.23): maybe reenable
-  govet:
-    enable-all: true
-    disable:
-      - fieldalignment
-      - shadow
-      - composites
-  lll:
-    line-length: 140
-  revive:
-    # Unfortunately disabling any single rules disables all other rules, even
-    # if we set `enable-all: true`
-    #
-    # To get around this, we include default rules:
-    # https://github.com/mgechev/revive/blob/master/defaults.toml
+  default: standard
+  enable:
+    - asciicheck
+    - bidichk
+    - bodyclose
+    - copyloopvar
+    - decorder
+    - dogsled
+    - dupl
+    - dupword
+    - durationcheck
+    - errcheck
+    - errchkjson
+    - errname
+    - errorlint
+    - exhaustive
+    - fatcontext
+    - forbidigo
+    - ginkgolinter
+    - gocheckcompilerdirectives
+    - gochecksumtype
+    - gocritic
+    - godot
+    - goheader
+    - gomoddirectives
+    - gomodguard
+    - goprintffuncname
+    - gosec
+    - gosmopolitan
+    - govet
+    - grouper
+    - ineffassign
+    - lll
+    - loggercheck
+    - mirror
+    - misspell
+    - nilerr
+    - nilnil
+    - noctx
+    - nolintlint
+    - predeclared
+    - promlinter
+    - protogetter
+    - reassign
+    - revive
+    - rowserrcheck
+    - sloglint
+    - sqlclosecheck
+    - staticcheck
+    - tagalign
+    - testableexamples
+    - testifylint
+    - tparallel
+    - unconvert
+    - unparam
+    - unused
+    - usetesting
+    - usestdlibvars
+    - wastedassign
+    - whitespace
+    - zerologlint
+  settings:
+    errcheck:
+      check-blank: true
+    gosec:
+      excludes:
+        - G601
+        - G115
+    govet:
+      disable:
+        - fieldalignment
+        - shadow
+        - composites
+        - buildtag
+      enable-all: true
+    lll:
+      line-length: 140
+    revive:
+      rules:
+        - name: blank-imports
+        - name: context-as-argument
+        - name: context-keys-type
+        - name: dot-imports
+        - name: empty-block
+        - name: error-naming
+        - name: error-return
+        - name: error-strings
+        - name: errorf
+        - name: exported
+        - name: increment-decrement
+        - name: indent-error-flow
+        - name: package-comments
+        - name: range
+        - name: receiver-naming
+        - name: redefines-builtin-id
+        - name: superfluous-else
+        - name: time-naming
+        - name: unexported-return
+        - name: unreachable-code
+        - name: var-declaration
+        - name: var-naming
+          arguments:
+            - [] # allowlist
+            - [] # blocklist
+            - - skip-package-name-checks: true
+    staticcheck:
+      checks:
+        - all
+        - -ST1000
+        - -ST1003
+        - -ST1016
+        - -ST1020
+        - -ST1021
+        - -ST1022
+        - -QF1008
+        - -QF1001
+        - -QF1006
+        - -QF1012
+  exclusions:
+    generated: lax
     rules:
-      - name: blank-imports
-      - name: context-as-argument
-      - name: context-keys-type
-      - name: dot-imports
-      - name: empty-block
-      - name: error-naming
-      - name: error-return
-      - name: error-strings
-      - name: errorf
-      - name: exported
-      - name: increment-decrement
-      - name: indent-error-flow
-      - name: package-comments
-      - name: range
-      - name: receiver-naming
-      - name: redefines-builtin-id
-      - name: superfluous-else
-      - name: time-naming
-      - name: unexported-return
-      # - name: unused-parameter # TODO(go1.23): maybe reenable
-      - name: unreachable-code
-      - name: var-declaration
-      - name: var-naming
+      - linters:
+          - contextcheck
+          - errcheck
+          - exhaustive
+          - forcetypeassert
+          - gosec
+          - govet
+          - noctx
+        path: _test\.go$|^tests/|^samples/
+      - linters:
+          - revive
+        path: perf/statz/statztest/
+        text: exported
 issues:
-  exclude-rules:
-    - path: _test\.go$|^tests/|^samples/
-      linters:
-        - errcheck
-        - contextcheck
-        - exhaustive
-        - forcetypeassert
-        - goconst
-        - gosec
-        - govet
-        - noctx
-    # statztest has the only set of exported methods that do not have a comment
-    - path: perf/statz/statztest/
-      linters:
-        - revive
-      text: exported
-  exclude-use-default: false
-  exclude-dirs-use-default: false
-  max-per-linter: 0
   max-same-issues: 0
+formatters:
+  enable:
+    - gci
+    - gofumpt
+  settings:
+    gci:
+      sections:
+        - standard
+        - default
+        - prefix(go.viam.com/utils)
+    gofumpt:
+      extra-rules: true
+  exclusions:
+    generated: lax
